Gnome: Fix unreadable text in calendar events

--- a/gtk-4.0/apps/_gnome.scss
+++ b/gtk-4.0/apps/_gnome.scss
@@ -249,9 +249,13 @@
 /*******************
  * Calendar events *
 ********************/
-.color-light{
-  & label, &.timed label {
-    color: #2e3440;
-    opacity:1;
+.color-light {
+  &.timed label, .event-popover label {
+    color: $fg_color;
+    opacity: 1;
+  }
+  & label {
+    color: $bg_color;
+    opacity: 1;
   }
 }
